# docker-templates

./: .env  .env.prod  .env.prod.db  Dockerfile  Dockerfile.prod  README.md  docker-compose-dev.yml  docker-compose-prod.yml  entrypoint.prod.sh  entrypoint.sh  requirements.txt
app/: Dockerfile  Dockerfile.prod
core/: settings.py
docker-django-nginx-postgres-celery/: .env  .env.dev  .env.prod  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  entrypoint.sh  pyproject.toml
docker-django-nginx-postgres-celery/django/: Dockerfile  entrypoint.sh  pyproject.toml
docker-django-nginx-postgres-celery/django/app/: apps.py  views.py
docker-django-nginx-postgres-celery/django/core/: settings.py
src/: requirements.txt
src/core/: settings.py
