[tool.poetry]
name = "docker-django-nginx-postgres-celery"
version = "0.1.0"
description = ""
authors = ["Diana Matkava"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.5.6"

[tool.poetry.group.dev.dependencies]
Django = "^5.0.7"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
celery = "^5.4.0"
redis = "^5.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
